--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <center>
         <p>
           Make With ♥️ by
-          <a class="footer" href="https://github.com/AllxdDev-Hosting">Lemon</a>
+          <a class="footer" href="https://github.com/AllxdDev-Hosting">AllxdDev</a>
         </p>
       </center>
     </footer>
